getById works with JWT instead of ID. renaming it causes errors?
